# mcp-argocd

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: auth-delegator.yaml  deployment.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
src/mcp_argocd/: auth_exchange.py  auth_verifier.py  dex.py  http.py  tools.py
tests/: test_argocd_token_retry.py  test_auth_exchange.py  test_auth_verifier.py  test_caller_jwt_middleware.py
