[project]
name = "mcp-argocd"
version = "0.1.0"
description = "Read-only ArgoCD MCP server. Outbound auth: projected SA token → Dex token-exchange → ArgoCD bearer (no static API tokens). Incoming auth via kube-rbac-proxy K8s SA TokenReview."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.18.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "romaine-auth @ git+https://github.com/nelsong6/romaine-auth-py.git@dcc052dea53061c96734024a8cfe113b12b08b79",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required for the romaine-auth git URL dependency.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_argocd"]

[project.scripts]
mcp-argocd-http = "mcp_argocd.http:main"
